Mobile nav spacing fixed

--- a/style.scss
+++ b/style.scss
@@ -55,7 +55,7 @@ h1 {
   }
 
   @include mobile {
-    font-size: 36px;
+    font-size: 24px;
   }
 }
 
@@ -253,7 +253,6 @@ nav {
     float: none;
     margin-top: 9px;
     display: block;
-    font-size: 16px;
   }
 
   a {
@@ -267,8 +266,9 @@ nav {
     }
 
     @include mobile {
+      display: inline-block;
       margin: 0 10px;
-      padding-top: 10px;
+      margin-top: 8px;
     }
   }
 }
